--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             opacity: 35%;
             z-index: -1;
             background-size: cover;
+            width: 90%;
         }
 
         h1 {
