--- a/index.html
+++ b/index.html
@@ -203,15 +203,15 @@
                         if (winConditions.includes("XXX")){
                             gameOver = true;
                             playerWon.innerHTML = "Winner is X!";
-                            playerWon.style.backgroundColor = "#D1FFBD";
+                            playerWon.style.backgroundColor = "#A2C692";
                         } else if(winConditions.includes("OOO")){
                             gameOver = true;
                             playerWon.innerHTML = "Winner is O!";
-                            playerWon.style.backgroundColor = "#D1FFBD";
+                            playerWon.style.backgroundColor = "#A2C692";
                         } else if (!moves.includes("-")){
                             gameOver = true;
                             playerWon.innerHTML = "Stalemate!";
-                            playerWon.style.backgroundColor = "#D1FFBD";
+                            playerWon.style.backgroundColor = "#A2C692";
                         }
                     };
 
